# organizations_directory

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.template.yml  pyproject.toml  test_data.json
alembic/: env.py
alembic/versions/: 2025_02_15_2146-c44bd83c2890_create_tables.py  9ebcd4d1010a_initial_migration.py
fastapi_application/: config.py  db_helper.py  dependencies.py  load_data.py  main.py  models.py
fastapi_application/api/: schemas.py  views.py
organizations_directory/: config.py  db_helper.py  dependencies.py  load_data.py  main.py  models.py  test_data.py
organizations_directory/api/: schemas.py  views.py
